{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 511,
  "lineage": "95d4c62d-4718-e090-2dca-46bb5b99be16",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0743b708ccbd88356",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c98389a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": ["dev-1"]
              }
            ],
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ad7618596f7c65b6",
            "ipv6_cidr_block": "2a05:d014:c77:c000::/56",
            "main_route_table_id": "rtb-05ba806743485d752",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-1",
              "frever-env": "dev-1",
              "kubernetes.io/cluster/dev-1": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-0f6b73b689970d0c1",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Full access",
                "from_port": 0,
                "ipv6_cidr_blocks": ["::/0"],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-00ad39dc4c78b803e"],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-00ad39dc4c78b803e"],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0f6b73b689970d0c1",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Full access",
                "from_port": 0,
                "ipv6_cidr_blocks": ["::/0"],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-00ad39dc4c78b803e"],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-1-cluster-20220205103150811200000001",
            "name_prefix": "dev-1-cluster-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-1-cluster"
            },
            "tags_all": {
              "Name": "dev-1-cluster"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": ["data.aws_vpc.vpc"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-00ad39dc4c78b803e",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Full access",
                "from_port": 0,
                "ipv6_cidr_blocks": ["::/0"],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-0f6b73b689970d0c1"],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-00ad39dc4c78b803e",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "Full access",
                "from_port": 0,
                "ipv6_cidr_blocks": ["::/0"],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-0f6b73b689970d0c1"],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": ["sg-0f6b73b689970d0c1"],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "dev-1-node-20220205103150811400000002",
            "name_prefix": "dev-1-node-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-1-node",
              "kubernetes.io/cluster/dev-1": "owned"
            },
            "tags_all": {
              "Name": "dev-1-node",
              "kubernetes.io/cluster/dev-1": "owned"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": ["data.aws_vpc.vpc"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-2763819429",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6b73b689970d0c1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-347636663",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6b73b689970d0c1",
            "self": false,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1468523685",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6b73b689970d0c1",
            "self": false,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-422593251",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6b73b689970d0c1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3106430242",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6b73b689970d0c1",
            "self": false,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-3970337578",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-409132191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": "sg-0f6b73b689970d0c1",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1000165298",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3829625516",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2598197153",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2493000539",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": true,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-452962621",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": true,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-1686095440",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-910904228",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": "sg-0f6b73b689970d0c1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-410077528",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": false,
            "source_security_group_id": "sg-0f6b73b689970d0c1",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-269800409",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": true,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3024842806",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00ad39dc4c78b803e",
            "self": true,
            "source_security_group_id": "sg-00ad39dc4c78b803e",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"app\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-02b658dbd2f63ff78",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-02b658dbd2f63ff78",
            "ingress": [],
            "name": "app-eks-node-group-20220205103150817800000006",
            "name_prefix": "app-eks-node-group-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-eks-node-group",
              "frever-env": "dev-1",
              "k8s.io/cluster-autoscaler/dev-1": "owned",
              "k8s.io/cluster-autoscaler/enabled": "TRUE"
            },
            "tags_all": {
              "Name": "app-eks-node-group",
              "frever-env": "dev-1",
              "k8s.io/cluster-autoscaler/dev-1": "owned",
              "k8s.io/cluster-autoscaler/enabled": "TRUE"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.database",
            "data.aws_subnet_ids.elasticache",
            "data.aws_subnet_ids.private",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"jaeger\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-0e5f0cc96d8321ef8",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0e5f0cc96d8321ef8",
            "ingress": [],
            "name": "jaeger-eks-node-group-20220205103150817700000005",
            "name_prefix": "jaeger-eks-node-group-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jaeger-eks-node-group",
              "frever-env": "dev-1"
            },
            "tags_all": {
              "Name": "jaeger-eks-node-group",
              "frever-env": "dev-1"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.database",
            "data.aws_subnet_ids.elasticache",
            "data.aws_subnet_ids.private",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}